// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFileCheckDeclaration should get file declaration correctly for a package json file with a custom check 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoMatchObject[2m([22m[32mexpected[39m[2m)[22m

[32m- Expected  - 2[39m
[31m+ Received  + 2[39m

[2m  Object {[22m
[32m-   \\"devDependencies\\": ObjectContaining {[39m
[32m-     \\"prettier\\": StringMatching /^(([0-9][0-9]+|[3-9]).([0-9][0-9]+|[0-9]).([0-9][0-9]+|[0-9])|([0-9][0-9]+|[2-9]).([0-9][0-9]+|[1-9]).([0-9][0-9]+|[0-9])|([0-9][0-9]+|[2-9]).([0-9][0-9]+|[0-9]).([0-9][0-9]+|[0-9]))$/,[39m
[31m+   \\"devDependencies\\": Object {[39m
[31m+     \\"prettier\\": \\"1.7.21\\",[39m
[2m    },[22m
[2m    \\"scripts\\": ObjectContaining {[22m
[2m      \\"format\\": \\"prettier --write '**/*.ts' --config ./prettier.config.js\\",[22m
[2m    },[22m
[2m  }[22m"
`;

exports[`getFileCheckDeclaration should get file declaration correctly for a package json file with a custom check 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoMatchObject[2m([22m[32mexpected[39m[2m)[22m

[32m- Expected  - 2[39m
[31m+ Received  + 2[39m

[2m  Object {[22m
[2m    \\"devDependencies\\": ObjectContaining {[22m
[2m      \\"prettier\\": StringMatching /^(([0-9][0-9]+|[3-9]).([0-9][0-9]+|[0-9]).([0-9][0-9]+|[0-9])|([0-9][0-9]+|[2-9]).([0-9][0-9]+|[1-9]).([0-9][0-9]+|[0-9])|([0-9][0-9]+|[2-9]).([0-9][0-9]+|[0-9]).([0-9][0-9]+|[0-9]))$/,[22m
[2m    },[22m
[32m-   \\"scripts\\": ObjectContaining {[39m
[32m-     \\"format\\": \\"prettier --write '**/*.ts' --config ./prettier.config.js\\",[39m
[31m+   \\"scripts\\": Object {[39m
[31m+     \\"format\\": \\"prettier --write '**/*.ts\\",[39m
[2m    },[22m
[2m  }[22m"
`;

exports[`getFileCheckDeclaration should get file declaration correctly for a prettier config file exact equals definition 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoEqual[2m([22m[32mexpected[39m[2m) // deep equality[22m

[32m- Expected  - 2[39m
[31m+ Received  + 1[39m

[2m  // ref: http://json.schemastore.org/prettierrc[22m

[2m  module.exports = {[22m
[2m    trailingComma: 'all',[22m
[2m    tabWidth: 2,[22m
[32m-   singleQuote: [7mtru[27me,[39m
[31m+   singleQuote: [7mfals[27me,[39m
[2m    printWidth: 150,[22m
[2m  };[22m
[32m-[39m"
`;

exports[`getFileCheckDeclaration should get file declaration correctly for a terraform file with a contains check 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoContain[2m([22m[32mexpected[39m[2m) // indexOf[22m

Expected substring: [32m\\"provider \\\\\\"aws\\\\\\" {[39m
[32m  region = \\\\\\"us-east-1\\\\\\"[39m
[32m}[39m
[32m\\"[39m
Received string:    [31m\\"provider \\\\\\"aws\\\\\\" {[39m
[31m  region  = \\\\\\"us-west-1\\\\\\"[39m
[31m}·[39m
[31mterraform {[39m
[31m  required_version = \\\\\\">= 0.14\\\\\\"[39m
[31m  backend \\\\\\"s3\\\\\\" {[39m
[31m    bucket = \\\\\\"terraform-state-someidentifier-dev\\\\\\"[39m
[31m    key    = \\\\\\"svc-cool-stuff\\\\\\"[39m
[31m    region = \\\\\\"us-east-1\\\\\\"[39m
[31m  }[39m
[31m}·[39m
[31mmodule \\\\\\"product\\\\\\" {[39m
[31m  source      = \\\\\\"../../product\\\\\\"[39m
[31m  environment = \\\\\\"dev\\\\\\"[39m
[31m}\\"[39m"
`;

exports[`getFileCheckDeclaration should get file declaration correctly for an optional file contains check declaration 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoContain[2m([22m[32mexpected[39m[2m) // indexOf[22m

Expected substring: [32m\\"import { invokeLambdaFunction } from 'simple-lambda-client';[39m
[32m\\"[39m
Received string:    [31m\\"import { AWS } from 'aws-sdk';\\"[39m"
`;

exports[`getFileCheckDeclaration should get file declaration correctly for an optional file equals check declaration 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoEqual[2m([22m[32mexpected[39m[2m) // deep equality[22m

[32m- Expected  - 2[39m
[31m+ Received  + 1[39m

[32m- export const sleep = (ms: number) => new Promise((resolve) => setTimeout(re[7msolve[27m, ms));[39m
[31m+ export const sleep = (ms: number) => new Promise((resolve[7m, reject[27m) => setTimeout(re[7mject[27m, ms));[39m
[32m-[39m"
`;
